# two_player_wordle

./: .gitignore  README.Docker.md  README.md  compose.yaml  example.env  package-lock.json
.github/workflows/: node.js.yml  rust.yml
client/: codegen.ts  jest.config.ts  package-lock.json  package.json  tsconfig.json
client/src/__generated__/: gql.ts  graphql.ts
client/src/__tests__/: encoding.ts
client/src/app/: ApolloClientProvider.tsx  StoreProvider.tsx  apollo-client.ts  constants.ts  encoding.ts  errors.ts  layout.tsx  page.tsx  types.ts
client/src/app/(debug)/: _layout.tsx
client/src/app/(debug)/new_game/: page.tsx  server.ts  types.ts
client/src/app/(debug)/redux/: Counter.tsx  counter.module.css  page.tsx
client/src/app/(game)/: GameSessionProvider.tsx  layout.tsx  types.ts
client/src/app/(game)/game/: GameView.tsx  encoding.ts  gameController.tsx  page.tsx  server.ts
client/src/app/(game)/games/: GamesQueryContext.ts  gamesController.tsx  gamesView.tsx  page.tsx  server.ts  types.ts
client/src/app/(game)/joining/: JoiningController.tsx  (+4 more)
client/src/lib/: store.ts
graphql_server/: Cargo.toml  Dockerfile
graphql_server/src/: cors.rs  errors.rs  lib.rs  main.rs  models.rs  mutation.rs  query.rs  scalars.rs
graphql_server/src/models/: encoding.rs  scalars.rs
matchmaking/: Cargo.toml  Dockerfile  README.Docker.md
matchmaking/src/: cors.rs  join_game.rs  lib.rs  main.rs
word/: Dockerfile  env.py  main.py  requirements.txt
word/db/: __main__.py  checks.py  models.py  read.py
word/routes/: check.py  checks.py  index.py  word.py
(+16 files in other folders)
